structuration des apis

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,19 +5,19 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Liste des Liens</h1>
+	<h1>Liste des api disponible</h1>
 	<ol>
-		<li><a href="/agence">Get Agence</a></li>
-		<li><a href="/agence/id/2">GET Agence /id/{int}</a></li>
-		<li><a href="/agence">POST Agence</a></li>
+		<li><a href="/agence">GET /agence</a></li>
+		<li><a href="/agence/id/2">GET /agence/id/{int}</a></li>
+		<li><a href="/agence">POST /agence</a></li>
 
 	</ol>
 	<hr/>
 	
 	<ol>
-		<li><a href="/employe">Get employee</a></li>
-		<li><a href="/employe/2">GET employe {int}</a></li>
-		<li><a href="/employe">POST employe</a></li>
+		<li><a href="/employe">GET /employee</a></li>
+		<li><a href="/employe/2">GET /employe/{int}</a></li>
+		<li><a href="/employe">POST /employe</a></li>
 
 	</ol>
 	
